# vfs-appt-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  check.py  pyproject.toml  vfs-check.service
.github/workflows/: check.yml
deploy/: README.md  run.sh  vfs-check.service  vfs-check.timer
tests/: test_config.py  test_notifier.py  test_scraper.py  test_state.py
vfs/: auth.py  config.py  notifier.py  scraper.py  state.py
