[project]
name = "vfs-appt-bot"
version = "0.1.0"
description = "Personal monitor for VFS Global Netherlands appointment availability."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "patchright>=1.59.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
